--- a/robin/part_02/Greedy1.ipynb
+++ b/robin/part_02/Greedy1.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIhgdafl/OEkdKzbPshNCw"
+      "authorship_tag": "ABX9TyNIhgdafl/OEkdKzbPshNCw",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/malaheaven/This-is-coding-test/blob/study1/robin/part_02/Greedy1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
